# lattice

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
app/: package.json
app/src/: index.html  settings.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
cloud/: README.md  package.json  schema.sql  tsconfig.json  wrangler.example.toml  wrangler.toml
cloud/src/: index.ts  text.d.ts
cmd/lattice/: client.go  config.go  configcli.go  extract.go  hosted.go  index.go  main.go  openurl.go  pollagg.go  polls.go  server.go  share.go  skills.go  spawn.go  spawn_unix.go  spawn_windows.go  store.go  store_test.go
cmd/lattice/dashboard/: app.js  i18n.js  index.html  poll.js  reload.js  style.css
cmd/lattice/skill/: SKILL.md  template.html
cmd/lattice/skill/examples/: interactive-walkthrough.html  poll-bakeoff.html  poll-live-reveal.html
examples/: lattice-arquitetura.html  lattice-pitch.html
launchd/: dev.yeksax.lattice.plist
skills/html-summary/: SKILL.md  template.html
web/: README.md  astro.config.mjs  package.json  wrangler.toml
web/src/components/: Forest.astro
web/src/layouts/: Layout.astro
web/src/pages/: 404.astro  download.astro  index.astro
web/src/scripts/: detect-os.ts  download.ts  landing.ts  locale.ts  main.ts
web/src/styles/: global.css
(+2 files in other folders)
